--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-        <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
+        <a href="index.html">
+            <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
+        </a>
         <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
     </header>
     <nav class="navbar">
