home page content (placeholder)
home page content (placeholder)

--- a/index.html
+++ b/index.html
@@ -41,8 +41,25 @@
     </nav>
     <div class="content">
         <div class="section">
-            <h2>WARM WELCOME</h2>
-            <p>Divyataa is a Montessori house for the new era. We have embraced international Montessori approach and integrated strategies to impart 21st century skills of collaboration, communication, critical thinking and creativity. We value social-emotional learning, value education, focus and public speaking skills in par with STEAM fields of Science, Technology, Engineering, Arts and Mathematics. We have adopted phonetics, experiential learning, projects, roleplay, storytelling, and creative play as methodologies of teaching.</p>
+            <h2 style="text-align: center; padding: 20px;">WARM WELCOME</h2>
+            <p style="text-align: center;">Divyataa is a Montessori house for the new era. We have embraced international Montessori approach and integrated strategies to impart 21st century skills of collaboration, communication, critical thinking and creativity. We value social-emotional learning, value education, focus and public speaking skills in par with STEAM fields of Science, Technology, Engineering, Arts and Mathematics. We have adopted phonetics, experiential learning, projects, roleplay, storytelling, and creative play as methodologies of teaching.</p>
+        </div>
+        <div class="section">
+            <h2 style="text-align: center; padding: 20px;">Our Vision</h2>
+            <p style="text-align: center;">At Divyataa Enriched Montessori Foundation, our vision is to nurture the innate curiosity and creativity of every child. We strive to create an environment where children feel empowered to explore, innovate, and grow into confident, compassionate leaders of tomorrow.</p>
+        </div>
+        <div class="section">
+            <h2 style="text-align: center; padding: 20px;">Our Mission</h2>
+            <p style="text-align: center;">Our mission is to provide a holistic education that balances academic excellence with emotional well-being. We aim to cultivate a love for learning, respect for others, and a sense of responsibility towards the community and the environment.</p>
+        </div>
+        <div class="section">
+            <h2 style="text-align: center; padding: 20px;">Why Choose Divyataa?</h2>
+            <ul style="text-align: center;">
+                <li><strong>Child-Centered Learning:</strong> Our Montessori approach ensures that each child progresses at their own pace, discovering their strengths and interests.</li>
+                <li><strong>Experienced Educators:</strong> Our teachers are trained in both traditional Montessori methods and modern educational techniques, ensuring a well-rounded learning experience.</li>
+                <li><strong>Safe and Nurturing Environment:</strong> We prioritize the safety and well-being of our students, creating a supportive atmosphere where they can thrive.</li>
+                <li><strong>Parental Involvement:</strong> We believe in strong partnerships with parents and provide regular updates and opportunities for involvement in the school community.</li>
+            </ul>
         </div>
         <!-- Rest of the home page content -->
     </div>
