--- a/about-montessori.html
+++ b/about-montessori.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Styles/divyataa.css">
     <!-- Link to external JavaScript file -->
     <script src="Scripts/divyataa.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
