--- a/programs-offered.html
+++ b/programs-offered.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Styles/divyataa.css">
     <!-- Link to external JavaScript file -->
     <script src="Scripts/divyataa.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .content {
             padding: 20px;
@@ -91,7 +92,7 @@
         <ul class="nav-menu">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item dropdown-parent">
-                <a href="#" class="nav-link" onclick="toggleDropdown(event)">About</a>
+                <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
                 <ul class="dropdown">
                     <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="about-montessori.html" class="nav-link">About Montessori</a></li>
