--- a/Gallery.html
+++ b/Gallery.html
@@ -28,6 +28,16 @@
             max-width: 100%;
             height: auto;
         }
+
+        #gallery { 
+            display: flex; 
+            flex-wrap: wrap; 
+            gap: 12px; 
+            }
+        .fb-page {
+        flex: 1 1 300px;  /* grow/shrink around a 300px base */
+        }
+
     </style>
 
 <div id="fb-root"></div>
