--- a/Gallery.html
+++ b/Gallery.html
@@ -63,7 +63,7 @@
                 <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
                 <ul class="dropdown">
                     <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">About Montessori</a></li>
+                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
                 </ul>
             </li>
             <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
