--- a/about-montessori.html
+++ b/about-montessori.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Montessori - Divyataa Enriched Montessori Foundation</title>
+    <title>Why Montessori - Divyataa Enriched Montessori Foundation</title>
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="Styles/divyataa.css">
     <!-- Link to external JavaScript file -->
     <script src="Scripts/divyataa.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .youtube-container {
+          position: relative;
+          padding-bottom: 56.25%; /* 9/16 aspect ratio */
+          height: 0;
+          overflow: hidden;
+        }
+        .youtube-container iframe {
+          position: absolute;
+          top: 0; left: 0;
+          width: 100%; height: 100%;
+        }
+      </style>
 </head>
 <body>
     <header>
@@ -29,7 +42,7 @@
                 <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
                 <ul class="dropdown">
                     <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">About Montessori</a></li>
+                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
                 </ul>
             </li>
             <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
@@ -56,6 +69,13 @@
                 <li>Yoga</li>
             </ul>
         </div>
+        <div class="youtube-container">
+            <iframe
+              src="https://www.youtube.com/embed/k-hVGkNlKLo"
+              frameborder="0"
+              allowfullscreen>
+            </iframe>
+          </div>      
     </div>
 </body>
 </html>
