--- a/about-montessori.html
+++ b/about-montessori.html
@@ -1,81 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why Montessori - Divyataa Enriched Montessori Foundation</title>
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="Styles/divyataa.css">
-    <!-- Link to external JavaScript file -->
-    <script src="Scripts/divyataa.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Why Montessori - Divyataa Enriched Montessori Foundation</title>
+  <!-- Updated CSS -->
+  <link rel="stylesheet" href="Styles/divyataa.css">
+  <script src="Scripts/divyataa.js" defer></script>
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        .youtube-container {
-          position: relative;
-          padding-bottom: 56.25%; /* 9/16 aspect ratio */
-          height: 0;
-          overflow: hidden;
-        }
-        .youtube-container iframe {
-          position: absolute;
-          top: 0; left: 0;
-          width: 100%; height: 100%;
-        }
-      </style>
+            * {
+            box-sizing: border-box;
+            }
+            body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            }
+
+            .programs-video-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            margin: 2rem;
+            }
+
+            .programs-list {
+            list-style-type: disc;
+            margin-left: 1.5rem;
+            line-height: 1.6;
+            }
+
+           /* 1) Define the correct 9/16 ratio on the container */
+            .video-container {
+            width: 100%;              /* fill its flex slot */
+            max-width: 400px;         /* optional cap on desktop */
+            aspect-ratio: 9 / 16;     /* force a 9∶16 box */ /* :contentReference[oaicite:0]{index=0} */
+            }
+
+            /* 2) Make the iframe fill the container exactly */
+            .video-container iframe {
+            width: 100%;
+            height: 100%;
+            border: 0;
+            display: block;
+            }
+            @media screen and (min-width: 768px) {
+            .programs-video-wrapper {
+                flex-direction: row;
+                align-items: flex-start;
+            }
+
+            .programs-list-container,
+            .video-container {
+                flex: 1 1 0;
+            }
+
+            .video-container {
+                max-width: 400px;
+            }
+            }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="hamburger" onclick="toggleMenu()">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <a href="index.html">
-            <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
-        </a>
-        <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
-    </header>
-    <nav class="navbar">
-        <ul class="nav-menu">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item dropdown-parent">
-                <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
-                <ul class="dropdown">
-                    <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
-                </ul>
-            </li>
-            <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
-            <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
-            <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
-            <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
-        </ul>
-    </nav>
-    <div class="content">
-        <div class="section">
-            <h2>Divyataa Montessori Experience</h2>
-            <p>Montessori preschool curriculum includes exercises for practical life, sensory activities, language, math, and culture (Science & Arts).</p>
-            <ul class="programs-list">
-                <li>Value Education</li>
-                <li>Focus Training</li>
-                <li>Self Regulation Activities</li>
-                <li>Projects and Roleplay</li>
-                <li>Etiquette and Grooming</li>
-                <li>Sensory path</li>
-                <li>Story Telling</li>
-                <li>Music</li>
-                <li>Outdoor Play</li>
-                <li>Leadership Skills</li>
-                <li>Yoga</li>
-            </ul>
-        </div>
-        <div class="youtube-container">
-            <iframe
-              src="https://www.youtube.com/embed/k-hVGkNlKLo"
-              frameborder="0"
-              allowfullscreen>
-            </iframe>
-          </div>      
+  <header>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
+    <a href="index.html">
+      <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
+    </a>
+    <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+  </header>
+
+  <nav class="navbar">
+    <ul class="nav-menu">
+      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+      <li class="nav-item dropdown-parent">
+        <a href="#" class="nav-link" onclick="toggleDropdown(event)">
+          About <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i>
+        </a>
+        <ul class="dropdown">
+          <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
+          <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
+        </ul>
+      </li>
+      <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
+      <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
+      <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
+      <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
+    </ul>
+  </nav>
+
+  <div class="content">
+    <div class="programs-video-wrapper">
+      <!-- Left: bullet list -->
+      <div class="programs-list-container">
+        <h2>Divyataa Montessori Experience</h2>
+        <p>
+          Montessori preschool curriculum includes exercises for practical life, sensory activities,
+          language, math, and culture (Science &amp; Arts).
+        </p>
+        <ul class="programs-list">
+          <li>Value Education</li>
+          <li>Focus Training</li>
+          <li>Self Regulation Activities</li>
+          <li>Projects and Roleplay</li>
+          <li>Etiquette and Grooming</li>
+          <li>Sensory path</li>
+          <li>Story Telling</li>
+          <li>Music</li>
+          <li>Outdoor Play</li>
+          <li>Leadership Skills</li>
+          <li>Yoga</li>
+        </ul>
+      </div>
+
+      <!-- Right: Google Drive video -->
+      <div class="video-container">
+        <iframe
+          src="https://drive.google.com/file/d/13R-M7vsMu-KTkCDB4UZN9CgLQCTdl0Cm/preview"
+          allow="autoplay; encrypted-media"
+          allowfullscreen>
+        </iframe>
+      </div>      
+    </div>
+  </div>
 </body>
 </html>
