--- a/programs-offered.html
+++ b/programs-offered.html
@@ -191,7 +191,7 @@
             <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link">
               <i class="fab fa-facebook-f"></i> Facebook
             </a>
-            <a href="https://www.instagram.com/divyataa.montessori/" target="_blank" class="social-link">
+            <a href="https://www.instagram.com/divyataamontessori/" target="_blank" class="social-link">
               <i class="fab fa-instagram"></i> Instagram
             </a>
             <a href="https://wa.me/919751112300" target="_blank" class="social-link">
