--- a/Contact-us.html
+++ b/Contact-us.html
@@ -97,21 +97,33 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header" />
-    <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
-  </header>
-  <nav class="navbar">
-    <ul class="nav-menu">
-      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-      <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
-      <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
-      <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
-      <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
-      <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
-      <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
-    </ul>
-  </nav>
+    <header>
+        <div class="hamburger" onclick="toggleMenu()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <a href="index.html">
+            <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
+        </a>
+        <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+    </header>
+    <nav class="navbar">
+        <ul class="nav-menu">
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item dropdown-parent">
+                <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
+                <ul class="dropdown">
+                    <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
+                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
+                </ul>
+            </li>
+            <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
+            <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
+            <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
+            <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
+        </ul>
+    </nav>
   <main class="contact-section">
     <div class="contact-info">
       <h2>Contact Information</h2>
