--- a/Contact-us.html
+++ b/Contact-us.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us</title>
-  <!-- External CSS -->
-  <link rel="stylesheet" href="Styles/divyataa.css" />
-  <!-- Font Awesome for Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="Styles/divyataa.css">
+    <!-- Link to external JavaScript file -->
+    <script src="Scripts/divyataa.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
     .contact-section {
       display: flex;
       flex-direction: column;
@@ -57,7 +48,7 @@
     }
 
     .social-media a:hover {
-      color: #000000;
+      color: #8c0aa3;
     }
 
     .map-container {
@@ -94,7 +85,7 @@
         height: 300px;
       }
     }
-  </style>
+    </style>
 </head>
 <body>
     <header>
@@ -124,33 +115,32 @@
             <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
         </ul>
     </nav>
-  <main class="contact-section">
-    <div class="contact-info">
-      <h2>Contact Information</h2>
-      <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
-      <p><strong>Call us:</strong> <a href="tel:+919751112300"><i class="fas fa-phone-alt"></i> 9751112300</a></p>
-      <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com"><i class="fas fa-envelope"></i> divyataa.info@gmail.com</a></p>
-      <div class="social-media-buttons">
-        <h2>Socials</h2>
-        <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link">
-          <i class="fab fa-facebook-f"></i> Facebook
-        </a>
-        <a href="https://www.instagram.com/divyataamontessori/" target="_blank" class="social-link">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://wa.me/919751112300" target="_blank" class="social-link">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-      </div>          
-  </div>
-    </div>
-    <div class="map-container">
-        <h2 style="color: #000000;">Location</h2>
-        <iframe
-        src="https://www.google.com/maps/embed/v1/place?q=divyataa+enriched+montessori+foundation&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
+    <main class="contact-section">
+        <div class="contact-info">
+          <h2>Contact Information</h2>
+          <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+          <p><strong>Call us:</strong> <a href="tel:+919751112300"><i class="fas fa-phone-alt"></i> 9751112300</a></p>
+          <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com"><i class="fas fa-envelope"></i> divyataa.info@gmail.com</a></p>
+          <div class="social-media-buttons">
+            <h2>Socials</h2>
+            <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link">
+              <i class="fab fa-facebook-f"></i> Facebook
+            </a>
+            <a href="https://www.instagram.com/divyataamontessori/" target="_blank" class="social-link">
+              <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://wa.me/919751112300" target="_blank" class="social-link">
+              <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+          </div>     
+        </div>
+        <div class="map-container">
+            <h2 style="color: #8c0aa3;">Location</h2>
+          <iframe
+          src="https://www.google.com/maps/embed/v1/place?q=divyataa+enriched+montessori+foundation&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
           allowfullscreen
-        ></iframe>
-      </div>
-  </main>
+          ></iframe>
+        </div>
+      </main>
 </body>
 </html>
