--- a/Gallery.html
+++ b/Gallery.html
@@ -1,91 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="Styles/divyataa.css">
-    <!-- Link to external JavaScript file -->
-    <script src="Scripts/divyataa.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery</title>
+  <link rel="stylesheet" href="Styles/divyataa.css" />
+  <script src="Scripts/divyataa.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <style>
+    .video-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      padding: 40px 20px;
+    }
 
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            padding: 20px;
-        }
+    .video-wrapper {
+      flex: 1 1 300px;
+      max-width: 500px;
+      aspect-ratio: 16 / 9;
+      position: relative;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
 
-        .gallery img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        #gallery { 
-            display: flex; 
-            flex-wrap: wrap; 
-            gap: 12px; 
-            }
-        .fb-page {
-        flex: 1 1 300px;  /* grow/shrink around a 300px base */
-        }
-
-    </style>
-
-<div id="fb-root"></div>
-<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script>
-
+    .video-wrapper iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="hamburger" onclick="toggleMenu()">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <a href="index.html">
-            <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header">
-        </a>
-        <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
-    </header>
-    <nav class="navbar">
-        <ul class="nav-menu">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item dropdown-parent">
-                <a href="#" class="nav-link" onclick="toggleDropdown(event)">About  <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></i></a>
-                <ul class="dropdown">
-                    <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
-                </ul>
-            </li>
-            <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
-            <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
-            <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
-            <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
+  <header>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <a href="index.html">
+      <img src="Images/logo-plain.png" alt="Divyataa Logo" class="logo-header" />
+    </a>
+    <h1 class="school-name-header">Divyataa Enriched Montessori Foundation</h1>
+  </header>
+
+  <nav class="navbar">
+    <ul class="nav-menu">
+      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+      <li class="nav-item dropdown-parent">
+        <a href="#" class="nav-link" onclick="toggleDropdown(event)">About <i class="fa-solid fa-chevron-down" style="padding: 0.25rem;"></i></a>
+        <ul class="dropdown">
+          <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
+          <li class="nav-item"><a href="about-montessori.html" class="nav-link">Why Montessori</a></li>
         </ul>
-    </nav>
-    <div class="gallery" id="gallery-container">
-        <div class="fb-page"
-        data-href="https://www.facebook.com/divyataa.montessori/"
-        data-tabs="timeline"
-        data-width="480"
-        data-height="600"
-        data-small-header="false"
-        data-adapt-container-width="true"
-        data-hide-cover="false"
-        data-show-facepile="true">
-        </div>
-   </div>   
-</body>
-  <!-- Footer -->
+      </li>
+      <li class="nav-item"><a href="programs-offered.html" class="nav-link">Programs Offered</a></li>
+      <li class="nav-item"><a href="School-and-Campus.html" class="nav-link">School & Campus</a></li>
+      <li class="nav-item"><a href="Gallery.html" class="nav-link">Gallery</a></li>
+      <li class="nav-item"><a href="Contact-us.html" class="nav-link">Contact Us</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="video-gallery">
+      <div class="video-wrapper">
+        <iframe src="https://drive.google.com/file/d/1yHXvKpDsvMPsriX-e3zS6xGBzULFcRKx/preview" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+      <div class="video-wrapper">
+        <iframe src="https://drive.google.com/file/d/1_HZ7wKLRdnUc5F8Kqfuix5oR3Dwu8uWV/preview" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+      <div class="video-wrapper">
+        <iframe src="https://drive.google.com/file/d/1V1Vx3OPQGlZly16w_KATFQlkkaKZmU6k/preview" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+    </section>
+  </main>
+
   <footer>
     <div class="footer-wrapper">
       <div class="footer-details">
@@ -94,17 +85,11 @@
         <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
         <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
         <div class="social-media-buttons">
-            <h2>Socials</h2>
-            <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link">
-              <i class="fab fa-facebook-f"></i> Facebook
-            </a>
-            <a href="https://www.instagram.com/divyataamontessori/" target="_blank" class="social-link">
-              <i class="fab fa-instagram"></i> Instagram
-            </a>
-            <a href="https://wa.me/919751112300" target="_blank" class="social-link">
-              <i class="fab fa-whatsapp"></i> WhatsApp
-            </a>
-          </div>          
+          <h2>Socials</h2>
+          <a href="https://www.facebook.com/divyataa.divyataa.7" target="_blank" class="social-link"><i class="fab fa-facebook-f"></i> Facebook</a>
+          <a href="https://www.instagram.com/divyataamontessori/" target="_blank" class="social-link"><i class="fab fa-instagram"></i> Instagram</a>
+          <a href="https://wa.me/919751112300" target="_blank" class="social-link"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        </div>
       </div>
       <div class="map-container">
         <h2>Location</h2>
@@ -112,4 +97,5 @@
       </div>
     </div>
   </footer>
+</body>
 </html>
