--- a/School-and-Campus.html
+++ b/School-and-Campus.html
@@ -108,7 +108,7 @@
     </nav>
 
     <!-- Carousel Image Section -->
-    <div class="carousel-container">
+    <div c  lass="carousel-container">
         <div class="carousel-track">
         <div class="carousel-slide"><img src="Images/campus1.png" alt="Divyataa Campus 1" /></div>
         <div class="carousel-slide"><img src="Images/campus2.png" alt="Divyataa Campus 2" /></div>
@@ -133,7 +133,7 @@
     <div class="footer-wrapper">
       <div class="footer-details">
         <h2>Contact Information</h2>
-        <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+        <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Angeripalayam Main Road, Tirupur</p>
         <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
         <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
         <div class="social-media-buttons">
