--- a/about-montessori.html
+++ b/about-montessori.html
@@ -69,7 +69,6 @@
 
       .video-container { max-width: 400px; }
 
-      /* Switch to 4 columns on larger screens */
       .programs-tiles {
         grid-template-columns: repeat(4, 1fr);
       }
@@ -131,7 +130,6 @@
 
   <div class="content">
     <div class="programs-video-wrapper">
-      <!-- Left: tiled list -->
       <div class="programs-list-container">
         <h2>Divyataa Montessori Experience</h2>
         <p>
@@ -219,7 +217,7 @@
     <div class="footer-wrapper">
       <div class="footer-details">
         <h2>Contact Information</h2>
-        <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+        <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Angeripalayam Main Road, Tirupur</p>
         <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
         <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
         <div class="social-media-buttons">
