--- a/Contact-us.html
+++ b/Contact-us.html
@@ -118,7 +118,7 @@
     <main class="contact-section">
         <div class="contact-info">
           <h2>Contact Information</h2>
-          <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+          <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Angeripalayam Main Road, Tirupur</p>
           <p><strong>Call us:</strong> <a href="tel:+919751112300"><i class="fas fa-phone-alt"></i> 9751112300</a></p>
           <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com"><i class="fas fa-envelope"></i> divyataa.info@gmail.com</a></p>
           <div class="social-media-buttons">
