--- a/about-us.html
+++ b/about-us.html
@@ -61,7 +61,7 @@
     <div class="footer-wrapper">
       <div class="footer-details">
         <h2>Contact Information</h2>
-        <p><strong>Address:</strong> Divyataa - Enriched Montessori Foundation, 76/6, "PAVAL", Park-In, Angeripalayam Main Road, Tirupur</p>
+        <p><strong>Address:</strong> Divyataa International School, 76/6, "PAVAL", Angeripalayam Main Road, Tirupur</p>
         <p><strong>Call us:</strong> <a href="tel:+919751112300">9751112300</a></p>
         <p><strong>Email:</strong> <a href="mailto:divyataa.info@gmail.com">divyataa.info@gmail.com</a></p>
         <div class="social-media-buttons">
